--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@prisma/client": "^5.9.1",
     "material-icons": "^1.13.12",
     "next": "14.0.4",
     "react": "^18",
@@ -23,6 +24,7 @@
     "eslint": "^8",
     "eslint-config-next": "14.0.4",
     "postcss": "^8.4.32",
+    "prisma": "^5.9.1",
     "tailwindcss": "^3.4.0",
     "typescript": "^5"
   }
