--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "@types/bcrypt": "^5.0.2",
     "bcrypt": "^5.1.1",
     "material-icons": "^1.13.12",
+    "multer": "^1.4.5-lts.1",
     "next": "14.0.4",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-icons": "^5.0.1"
   },
   "devDependencies": {
     "@types/node": "^20",
