--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "next": "14.0.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^5.0.1"
   },
   "devDependencies": {
