--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@prisma/client": "^5.9.1",
     "@types/bcrypt": "^5.0.2",
     "bcrypt": "^5.1.1",
+    "date-fns": "^3.3.1",
     "material-icons": "^1.13.12",
     "multer": "^1.4.5-lts.1",
     "next": "14.0.4",
