--- a/.env
+++ b/.env
@@ -5,3 +5,6 @@
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 DATABASE_URL="mongodb+srv://ratanon1:cc3vRILLZsFkaQst@cluster0.plhgru5.mongodb.net/SE_Project?retryWrites=true&w=majority"
+NEXTAUTH_SECRET=secretPOON
+
+NEXTAUTH_URL=http://localhost:3000
