--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "material-icons": "^1.13.12",
     "multer": "^1.4.5-lts.1",
     "next": "14.0.4",
+    "next-auth": "^4.24.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
