--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "bcrypt": "^5.1.1",
     "date-fns": "^3.3.1",
     "material-icons": "^1.13.12",
+    "material-symbols": "^0.16.0",
     "multer": "^1.4.5-lts.1",
     "next": "14.0.4",
     "next-auth": "^4.24.6",
