--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@prisma/client": "^5.9.1",
+    "@stripe/react-stripe-js": "^2.5.1",
+    "@stripe/stripe-js": "^3.0.7",
     "@types/bcrypt": "^5.0.2",
     "bcrypt": "^5.1.1",
     "date-fns": "^3.3.1",
