--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "date-fns": "^3.3.1",
     "material-icons": "^1.13.12",
     "material-symbols": "^0.16.0",
+    "micro": "^10.0.1",
     "multer": "^1.4.5-lts.1",
     "next": "14.0.4",
     "next-auth": "^4.24.6",
