--- a/package.json
+++ b/package.json
@@ -9,10 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.0",
+    "@mui/material": "^5.15.12",
+    "@mui/x-data-grid": "^6.19.6",
     "@prisma/client": "^5.9.1",
     "@stripe/react-stripe-js": "^2.5.1",
     "@stripe/stripe-js": "^3.0.7",
     "@types/bcrypt": "^5.0.2",
+    "axios": "^1.6.7",
     "bcrypt": "^5.1.1",
     "date-fns": "^3.3.1",
     "material-icons": "^1.13.12",
