--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/bcrypt": "^5.0.2",
     "axios": "^1.6.7",
     "bcrypt": "^5.1.1",
+    "bcryptjs": "^2.4.3",
     "date-fns": "^3.3.1",
     "material-icons": "^1.13.12",
     "material-symbols": "^0.16.0",
