--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,3 +11,10 @@ services:
     volumes:
       - .:/app
       - /app/node_modules
+
+  stripe-cli:
+    image: stripe/stripe-cli
+    container_name: stripe-cli
+    command: "listen --forward-to http://host.docker.internal:3000/api/stripe-webhook"
+    env_file:
+      - .env
