--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.0",
+    "@formkit/auto-animate": "^0.8.1",
     "@mui/material": "^5.15.12",
     "@mui/x-data-grid": "^6.19.6",
     "@prisma/client": "^5.9.1",
@@ -21,6 +22,8 @@
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
     "date-fns": "^3.3.1",
+    "emoji-picker-react": "^4.9.2",
+    "lottie-react": "^2.4.0",
     "material-icons": "^1.13.12",
     "material-symbols": "^0.16.0",
     "micro": "^10.0.1",
@@ -29,10 +32,13 @@
     "next": "14.0.4",
     "next-auth": "^4.24.6",
     "react": "^18.2.0",
+    "react-cookie": "^7.1.2",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.0.1",
-    "stripe": "^14.19.0"
+    "socket.io-client": "^4.7.5",
+    "stripe": "^14.19.0",
+    "zustand": "^4.5.2"
   },
   "devDependencies": {
     "@types/node": "^20",
