--- a/.env
+++ b/.env
@@ -4,7 +4,7 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="mongodb+srv://ratanon1:cc3vRILLZsFkaQst@cluster0.plhgru5.mongodb.net/SE_Project?retryWrites=true&w=majority"
+DATABASE_URL="mongodb+srv://thitiphat6391:WOjCgqmzhmVBPNTt@cluster0.4gbgswd.mongodb.net/SE-Project?retryWrites=true&w=majority&appName=Cluster0"
 NEXTAUTH_SECRET=secretPOON
 
 NEXTAUTH_URL=http://localhost:3000
