--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-icons": "^5.0.1",
     "socket.io-client": "^4.7.5",
     "stripe": "^14.19.0",
+    "sweetalert2": "^11.10.7",
     "zustand": "^4.5.2"
   },
   "devDependencies": {
