--- a/.env
+++ b/.env
@@ -5,6 +5,7 @@
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 DATABASE_URL="mongodb+srv://thitiphat6391:WOjCgqmzhmVBPNTt@cluster0.4gbgswd.mongodb.net/SE-Project?retryWrites=true&w=majority&appName=Cluster0"
+# DATABASE_URL="mongodb+srv://thitiphat6391:WOjCgqmzhmVBPNTt@cluster0.4gbgswd.mongodb.net/SE-Project?retryWrites=true&w=majority&appName=Cluster0"
 NEXTAUTH_SECRET=secretPOON
 
 NEXTAUTH_URL=http://localhost:3000
